--- a/search-app/src/App.css
+++ b/search-app/src/App.css
@@ -1,6 +1,15 @@
 .app {
-  font-size: calc(10px + 1vmin);
+  font-size: calc(10px + 0.7vmin);
   margin: 2em;
+}
+
+.box-desc {
+  margin: 1em 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 10;
+  -webkit-box-orient: vertical;
 }
 
 .main {
@@ -8,6 +17,34 @@
   margin: 0 auto;
 }
 
+.list-group-item {
+  padding: 1em !important;
+}
+
+.result-desc {
+  margin: 1em 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+}
+
+.result-link {
+  font-size: calc(10px + 0.6vmin);
+}
+
+.result-score {
+  font-size: calc(10px + 0.55vmin);
+  font-weight: 200;
+}
+
+.result-title {
+  font-size: calc(10px + 1.5vmin);
+  font-weight: 500;
+  color: #212529;
+  text-decoration: none;
+}
 
 .error {
   visibility: hidden;
